--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.1.3",
     "path": "^0.11.14",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "yelp": "^1.0.0"
   },
   "repository": {
     "type": "git",
