--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.10.6",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.1.3",
+    "parse": "^1.6.9",
     "path": "^0.11.14",
     "request": "^2.65.0",
     "yelp": "^1.0.0"
