--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.5.2",
     "debug": "^2.2.0",
     "ejs": "^2.3.3",
+    "es6-promise": "^3.0.2",
     "express": "^4.13.3",
     "fb": "^0.7.3",
     "googleplaces": "^0.6.0",
@@ -22,6 +23,8 @@
     "moment": "^2.10.6",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.1.3",
+    "node-promise": "^0.5.12",
+    "oauth": "^0.9.14",
     "parse": "^1.6.9",
     "path": "^0.11.14",
     "request": "^2.65.0",
